--- a/index.html
+++ b/index.html
@@ -283,9 +283,11 @@
             <div class="wishlist-icon">♡</div>
             <button class="add-btn">Add to cart</button>
           </div>
+          <a href="../pages/product.html" class="text-decoration-none text-reset">
           <div class="stars">★★★★★</div>
           <div class="product-name">Loveseat Sofa</div>
           <div class="price">$199.00 <span class="old-price">$400.00</span></div>
+        </a>
         </div>
 
         <div class="category-card">
@@ -296,9 +298,11 @@
             <div class="wishlist-icon">♡</div>
             <button class="add-btn">Add to cart</button>
           </div>
+          <a href="../pages/product.html" class="text-decoration-none text-reset">
           <div class="stars">★★★★★</div>
           <div class="product-name">Table Lamp</div>
           <div class="price">$24.99</div>
+        </a>
         </div>
 
         <div class="category-card">
@@ -309,9 +313,11 @@
             <div class="wishlist-icon">♡</div>
             <button class="add-btn">Add to cart</button>
           </div>
+          <a href="../pages/product.html" class="text-decoration-none text-reset">
           <div class="stars">★★★★★</div>
           <div class="product-name">Beige Table Lamp</div>
           <div class="price">$24.99</div>
+        </a>
         </div>
 
         <div class="category-card">
@@ -322,9 +328,11 @@
             <div class="wishlist-icon">♡</div>
             <button class="add-btn">Add to cart</button>
           </div>
+          <a href="../pages/product.html" class="text-decoration-none text-reset">
           <div class="stars">★★★★★</div>
           <div class="product-name">Bamboo Basket</div>
           <div class="price">$24.99</div>
+        </a>
         </div>
 
         <div class="category-card">
@@ -335,9 +343,11 @@
             <div class="wishlist-icon">♡</div>
             <button class="add-btn">Add to cart</button>
           </div>
+          <a href="../pages/product.html" class="text-decoration-none text-reset">
           <div class="stars">★★★★★</div>
           <div class="product-name">Toasted</div>
           <div class="price">$224.99</div>
+        </a>
         </div>
       </div>
     </div>
