--- a/pages/product.html
+++ b/pages/product.html
@@ -89,6 +89,7 @@
   </div>
 
   
+<div class="new-arrivals-section">
   <div class="container">
     <!-- You might allso like Section -->
     <div class="recommend-section">
@@ -163,6 +164,7 @@
           <div class="price">$224.99</div>
         </div>
       </div>
+    </div>
     </div>
     </div>
 
