--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--------------------------------------------------------------------------------------------------------->
         <!---------------------------------------------CAROUSEL---------------------------------------------------->
         <!--------------------------------------------------------------------------------------------------------->
-
+ 
         <div class="container">
             <!-- Bootstrap Carousel component -->
             <div id="carouselExampleIndicators" class="carousel slide">
@@ -199,7 +199,7 @@
             </div>
         </div>
 
-        <!-- Cart Sidebar Offcanvas - ADDED MISSING COMPONENT -->
+        <!-- Cart Sidebar Offcanvas -->
         <div class="offcanvas offcanvas-end" tabindex="-1" id="cartSidebar" aria-labelledby="cartSidebarLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="cartSidebarLabel">Cart</h5>
